--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Home - Introduction to Homotopy Type Theory in Cubical Agda</title>
+        <title>Introduction - Introduction to Homotopy Type Theory in Cubical Agda</title>
 
 
         <!-- Custom HTML head -->
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><a href="index.html" class="active">Home</a></li><li class="chapter-item affix "><a href="INSTALLING_AGDA.html">Installing Agda</a></li><li class="chapter-item affix "><a href="USING_AGDA.html">Using Agda</a></li><li class="chapter-item affix "><li class="part-title">Type Theory</li><li class="chapter-item "><a href="1--Type-Theory.1-1--Types-and-Functions.html">1.1: Types and Functions</a></li><li class="chapter-item "><a href="1--Type-Theory.1-2--Inductive-Types.html">1.2: Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html">1.3: Universes and More Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-4--Record-Types-and-Copatterns.html">1.4: Record Types and Copatterns</a></li><li class="chapter-item "><a href="1--Type-Theory.1-5--Propositions-as-Types.html">1.5: Propositions as Types</a></li><li class="chapter-item affix "><li class="part-title">Paths and Identifications</li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-1--Paths.html">2.1: Paths</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html">2.2: Equivalences and Path Algebra</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-3--Substitution-and-J.html">2.3: Substitution and J</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html">2.4: Composition and Filling</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-5--Transport.html">2.5: Transport</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-6--Univalence.html">2.6: Univalence</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-7--Propositions.html">2.7: Propositions</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-8--Sets-and-Higher-Types.html">2.8: Sets and Higher Types</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html">2.9: Contractible Maps</a></li><li class="chapter-item affix "><li class="part-title">Topics</li><li class="chapter-item "><a href="3--Topics.3-1--Structure-Identity-Principle.html">3.1: The Structure Identity Principle</a></li><li class="chapter-item "><a href="3--Topics.3-2--Modalities.html">3.2: Modalities</a></li><li class="chapter-item "><a href="3--Topics.3-3--Constructive-Logic.html">3.3: Constructive Logic</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="Library.Primitive.html">Primitives</a></li><li class="chapter-item affix "><a href="Library.Prelude.html">Prelude</a></li><li class="chapter-item affix "><a href="Library.Univalence.html">Univalence</a></li><li class="chapter-item affix "><a href="UNICODE_DICTIONARY.html">Unicode Dictionary</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="ACKNOWLEDGEMENTS.html">Acknowledgements</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><a href="index.html" class="active">Introduction</a></li><li class="chapter-item affix "><a href="INSTALLING_AGDA.html">Installing Agda</a></li><li class="chapter-item affix "><a href="USING_AGDA.html">Using Agda</a></li><li class="chapter-item affix "><li class="part-title">Type Theory</li><li class="chapter-item "><a href="1--Type-Theory.1-1--Types-and-Functions.html">1.1: Types and Functions</a></li><li class="chapter-item "><a href="1--Type-Theory.1-2--Inductive-Types.html">1.2: Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html">1.3: Universes and More Inductive Types</a></li><li class="chapter-item "><a href="1--Type-Theory.1-4--Record-Types-and-Copatterns.html">1.4: Record Types and Copatterns</a></li><li class="chapter-item "><a href="1--Type-Theory.1-5--Propositions-as-Types.html">1.5: Propositions as Types</a></li><li class="chapter-item affix "><li class="part-title">Paths and Identifications</li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-1--Paths.html">2.1: Paths</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html">2.2: Equivalences and Path Algebra</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-3--Substitution-and-J.html">2.3: Substitution and J</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html">2.4: Composition and Filling</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-5--Transport.html">2.5: Transport</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-6--Univalence.html">2.6: Univalence</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-7--Propositions.html">2.7: Propositions</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-8--Sets-and-Higher-Types.html">2.8: Sets and Higher Types</a></li><li class="chapter-item "><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html">2.9: Contractible Maps</a></li><li class="chapter-item affix "><li class="part-title">Topics</li><li class="chapter-item "><a href="3--Topics.3-1--Structure-Identity-Principle.html">3.1: The Structure Identity Principle</a></li><li class="chapter-item "><a href="3--Topics.3-2--Modalities.html">3.2: Modalities</a></li><li class="chapter-item "><a href="3--Topics.3-3--Constructive-Logic.html">3.3: Constructive Logic</a></li><li class="spacer"></li><li class="chapter-item affix "><li class="part-title">Behind-the-Scenes</li><li class="chapter-item "><a href="Library.Primitive.html">Primitives</a></li><li class="chapter-item "><a href="Library.Prelude.html">Prelude</a></li><li class="chapter-item "><a href="Library.Univalence.html">Univalence</a></li><li class="spacer"></li><li class="chapter-item affix "><a href="UNICODE_DICTIONARY.html">Unicode Dictionary</a></li><li class="chapter-item affix "><a href="ACKNOWLEDGEMENTS.html">Acknowledgements</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -204,12 +204,15 @@ Cavallo, Mörtberg and Zeuner</a></li>
 </ul>
 </li>
 </ul>
-<h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
-<p>To edit Agda files, you will need to install Agda and an editor that
-supports <code>agda-mode</code>: currently that is either VSCode or Emacs.
+<h2 id="how-to-complete-this-course"><a class="header" href="#how-to-complete-this-course">How to Complete this Course</a></h2>
+<p>These notes are not a reference text, rather, they are designed to be
+read front-to-back, starting with Lecture 1-1. Each Lecture is
+accessible by clicking the links in the menu to the left.</p>
+<p>To read Agda files, you will need to install Agda and an editor that
+supports <code>agda-mode</code>: currently that is either <a href="https://code.visualstudio.com/">VSCode</a> or <a href="https://www.gnu.org/software/emacs/">Emacs</a>.
 Detailed installation instructions are given
 <a href="INSTALLING_AGDA.html">here</a>.</p>
-<p>Once your editor is set up, clone or download <a href="https://github.com/CQTS/introduction-to-cubical">this repository</a> and
+<p>Once your editor is ready, clone or download <a href="https://github.com/CQTS/introduction-to-cubical">this repository</a> and
 open the file</p>
 <pre><code>lectures/1--Type-Theory/1-1--Types-and-Functions.lagda.md 
 </code></pre>
@@ -220,27 +223,24 @@ The notes are intended to be read either on the website or in your
 editor. Reading directly on GitHub is not recommended; the formatting
 and code highlighting does not work correctly.</p>
 </div>
-<h2 id="why-another-agda-course"><a class="header" href="#why-another-agda-course">Why Another Agda Course?</a></h2>
-<p>I don’t know, but too much cost has been sunk to stop now.</p>
 <h2 id="goals-of-this-course"><a class="header" href="#goals-of-this-course">Goals of this Course</a></h2>
 <p>These notes were written with the following goals in mind.</p>
 <ul>
-<li><strong>Be readable linearly</strong>: These notes are not a reference text,
-rather, they are designed to be read front-to-back. Effort has gone
-into ordering the concepts that are introduced so that nothing is
-used before it can be properly explained in isolation.</li>
+<li><strong>Be readable linearly</strong>: Concepts introduced in this course are
+carefully sequenced so that nothing is used before it can be
+properly explained in isolation.</li>
 <li><strong>Provide innumerable exercises</strong>: Most proofs are left as exercises,
 with hints provided as necessary. </li>
 <li><strong>Avoid black boxes</strong>: There are no postulates or big “trust me!”
-results that are never explained or put off until later. Every
-exercise is possible with only the tools readers have proven
-themselves before that point.</li>
+results that are unexplained or put off until later. Every exercise
+is possible with only the results readers have proven themselves
+before that point.</li>
 <li><strong>Be readable without a tutor</strong>: The notes should be understandable,
 and the exercises possible to complete, without in-person help from
 an experienced Cubical Agda user. mvrnote: we may not have achieved
 this</li>
 <li><strong>Cover some meaty topics</strong>: After the reader has finished these
-notes, we want them to feel prepared to read work that is on the
+notes, they should feel prepared to read work that is on the
 forefront of research in Homotopy Type Theory and Cubical Agda. We
 believe that the topics lectures in Part 3 will get them there.</li>
 </ul>
@@ -250,17 +250,16 @@ goals. We:</p>
 <li><strong>Don’t cover implementation details</strong>: We consider Cubical Type
 Theory mostly as a background theory in which to teach Homotopy Type
 Theory, in particular, we do not discuss cubical subtypes and
-filling in the maximum possible generality.</li>
+filling problems in the maximum possible generality.</li>
 <li><strong>Don’t stay compatible with other Agda libraries</strong>: We use
 different names and different definitions to existing Agda
 libraries, whenever this improves readability.</li>
 <li><strong>Don’t showcase Agda’s features</strong>: We don’t discuss Agda’s powerful
-modules, typeclasses, modalities, reflection faculties; anything not
-related to Agda’s cubical features.</li>
+module system, typeclasses, modalities, reflection faculties.</li>
 <li><strong>Don’t optimise performance</strong>: The definitions we use are not
 chosen with either type-checking or normalisation performance in
 mind. In some places faster options are available, but were avoided
-for being more complex or for sequencing reasons.</li>
+for complexity or sequencing reasons.</li>
 </ul>
 <h2 id="license"><a class="header" href="#license">License</a></h2>
 <p>???</p>
@@ -269,18 +268,20 @@ for being more complex or for sequencing reasons.</li>
 <ul>
 <li>We use biinvertible map for equivalence</li>
 <li><code class="Agda"><a href="2--Paths-and-Identifications.2-9--Contractible-Maps.html#2656" class="Function">fiber</a></code> has the path flipped to usual</li>
-<li><code class="Agda"><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html#33713" class="Function">∘e</a></code> i.e. <code>compEquiv</code> uses non-diagrammatic order</li>
+<li><code class="Agda"><a href="2--Paths-and-Identifications.2-4--Composition-and-Filling.html#33713" class="Function">∘e</a></code> a.k.a. <code>compEquiv</code> uses non-diagrammatic order</li>
 <li>We don’t go into detail on cubical subtypes</li>
 <li>Consequently, we don’t prove <code>hfill</code> in general, just the special
 cases that we need</li>
-<li>The type used in <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#2195" class="Function">idfun</a></code> is implicit</li>
+<li>The type used in <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#2180" class="Function">idfun</a></code> is implicit</li>
 <li><code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#18156" class="Function">→-map-≃</a></code> takes the domain equivalence flipped to avoid some path
 algebra, letting us introduce it earlier</li>
-<li>We use <code class="Agda"><a href="1--Type-Theory.1-2--Inductive-Types.html#8438" class="Datatype">⊤</a></code> and <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#6323" class="Datatype">∅</a></code> for the unit type and empty type respectively</li>
+<li>We use <code class="Agda"><a href="1--Type-Theory.1-2--Inductive-Types.html#8426" class="Datatype">⊤</a></code> and <code class="Agda"><a href="1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html#6308" class="Datatype">∅</a></code> for the unit type and empty type respectively</li>
 <li>We use “1-lab style” <code class="Agda"><a href="Library.Prelude.html#650" class="Function">hcomp</a></code>, so that the bottom face is provided
 as part of the partial element.</li>
-<li><code>FunctionEquivStr</code> doesn’t use implicit arguments, so we don’t
-have to fuss around with an implicit version of <code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#19027" class="Function">Π-map-cod≃</a></code></li>
+<li>In the SIP section, <code>FunctionEquivStr</code> doesn’t use implicit
+arguments, so we don’t have to fuss around with an implicit version
+of <code class="Agda"><a href="2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html#19027" class="Function">Π-map-cod≃</a></code></li>
+<li><code>transp</code> renamed to <code class="Agda"><a href="" class="Primitive">transport-fixing</a></code></li>
 </ul>
 
                   </main>
